syntax = "proto3";

package sentence;

service SentenceService {
  rpc AnalyzeSentence (SentenceRequest) returns (stream SentenceResponse) {}
}

message SentenceRequest {
  string sentence = 1;
}

message Parameter {
  string name = 1;
  string description = 2;
  optional string semantic_value = 3;
}

message SentenceResponse {
  string endpoint_id = 1;
  string endpoint_description = 2;
  repeated Parameter parameters = 3;
  string json_output = 4;
}
